syntax = "proto3";

package raft;

service Raft {
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply) {}
  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply) {}
  rpc InstallSnapshot(InstallSnapshotArgs) returns (InstallSnapshotReply) {}
}

message Log {
  int64 term = 1;
  int64 index = 2;
  bytes command = 3;
}

message RequestVoteArgs {
  int64 term = 1;
  string candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message RequestVoteReply {
  int64 term = 1;
  bool granted = 2;
}

message AppendEntriesArgs {
  int64 term = 1;
  string leader_id = 2;
  int64 prev_log_index = 3;
  int64 prev_log_term = 4;
  repeated Log entries = 5;
  int64 leader_commit = 6;
}

message AppendEntriesReply {
  int64 term = 1;
  bool success = 2;
  int64 conflict_index = 3;
  int64 conflict_term = 4;
}

message InstallSnapshotArgs {
  int64 term = 1;
  string leader_id = 2;
  int64 last_included_index = 3;
  int64 last_included_term = 4;
  bytes snapshot = 5;
}

message InstallSnapshotReply { int64 term = 1; }
